Adicionado jQuery Colorbox.

--- a/WebContent/css/stylesheet.css
+++ b/WebContent/css/stylesheet.css
@@ -2,5 +2,6 @@
 
 @IMPORT url('1-reset.css');
 @IMPORT url('jquery-ui-1.8.11.css');
+@IMPORT url('jquery.colorbox-1.3.16.css');
 @IMPORT url('common.css');
 @IMPORT url('dummy.css');
