--- a/WebContent/css/stylesheet.css
+++ b/WebContent/css/stylesheet.css
@@ -1,7 +1,6 @@
 @CHARSET 'UTF-8'; 
 
-@IMPORT url('1-reset.css');
-@IMPORT url('jquery-ui-1.8.16.css');
+@IMPORT url('1-bootstrap.min.css');
 @IMPORT url('jquery.colorbox-1.3.16.css');
 @IMPORT url('common.css');
 @IMPORT url('dummy.css');
